# arxiv-browse

./: #DECISIONS.md#  .coveragerc  .dockerignore  .gitignore  .gitmodules  .pylintrc  .python-version  .travis.yml  DECISIONS.md  Dockerfile  Dockerfile-invalidator  LICENSE  Makefile  Pipfile  README.md  app.py  browse.wsgi  default.nix  devenv.nix  diff.txt  get_test_article.py  labs-proposal.md  ladino_nlp_preservation.md  main.py  mypy.ini  populate_test_database.py  pyproject.toml  requirements.txt  scripts  test_browse.py  test_latexml.html  update-docs.sh  upload_static_assets.py  uwsgi.ini  wsgi.py
.github/workflows/: build-browse.yml  deploy-app.yml  deploy-browse.yml  deploy.yml  develop_pull_request_test.yml  python-app.yml  reverse-proxy-cd-on-merge.yml  test-workflow.yml
arxiv/dissemination/: __init__.py  routes.py
arxiv_dissemination/: __init__.py  app.py  object_stores.py  path_for_id.py  routes.py
arxiv_dissemination/services/: article_store.py  object_store.py  object_store_gs.py  object_store_local.py
arxivabs/browse/: filters.py
browse/: TWF  __init__.py  config.py  context.py  controllers.py  exceptions.py  factory.py  filters.py  models.py  pathmap.py  routes.py  url_converter.py  util.py  views.py
browse/commands/: check_paper_formats.py  invalidate.py
browse/controllers/: __init__.py  abs_page.py  audio.py  author.py  bibtexcite.py  catchup_page.py  conference_proceeding.py  cookies.py  dissimination.py  home_page.py  list_page.py  openurl_cookie.py  prevnext.py  repec.py  response_headers.py  stats_page.py  tb_page.py  year.py  years_operating.py
browse/domain/: __init__.py  author_affil.py  category.py  clickthrough.py  escape_html.py  fileformat.py  identifier.py  institution.py  itemsource.py  license.py  listing.py  metadata.py  metatags.py  routes.py  tex2utf.py  version.py
browse/formating/: cite.py  external_refs_cits.py
browse/formatting/: cite.py  email.py  external_refs_cits.py  latexml.py  metatags.py  search_authors.py
browse/invalidator/: __init__.py  app.py
browse/routes/: __init__.py  dissemination.py  processing.py  redirects.py  src.py  ui.py  unimplemented.py
browse/services/: __init__.py  anypath.py  audio.py  check.py  cite.py  db.py  key_patterns.py  repository.py
browse/stream/: file_processing.py  tarstream.py
browse/templates/: 400.html  CHROME-INTEGRATION.md  abs.html  abs_extra_services.html  alert_macro.html  announcement_banner.html  audio_landing_page.html  author.html  base.html  catchup.html  catchup_form.html  category_taxonomy.html  cookies.html  feedback_collector.html  feedback_collector_js.html  footer.html  format.html  header.html  layout.html  login.html  long_trailer.html  mobile-menu.html  openurl_cookies.html  opt_in_button.html  opt_in_modal.html  search_form.html  short_trailer.html  show-email-msg.html  unimplemented.html  user_banner.html  year.html
browse/util/: __init__.py  clickthrough.py  id_patterns.py  jinja-debug.py
cicd/: cloudbuild-develop-pr.yaml  cloudbuild-master-pr.yaml  env.arxiv-browse-integration.arxiv-development.yaml  env.arxiv-browse.arxiv-development.yaml
cicd/deploy/: README.md  cloudrun.yaml  deploy  deploy.sh  main.tf  outputs.tf  variables.tf  variables.tfvars  variables.tfvars.orig
data/: .gitignore
deploy/: README.md  add-browse-paths.sh  build-and-push.sh  config.sh  env_values.txt.example  phoenix-lb-http.yaml  setupCompute.sh  setupLB.sh  update-instance-group.sh
dissemination/: Dockerfile  pyproject.toml
dissemination/arxiv_dissemination/: app.py  routes.py  trace.py
dissemination/cicd/: cloudbuild-develop-pr.yaml  cloudbuild-master-pr.yaml
dissemination/scripts/: analyze_warnings.py
dissemination/sync_prod_to_gcp/: requirements.txt  sync_all_to_gcp.py
dissemination/tests/: test_unavailable.py  test_withdrawn.py
docs/: CHROME-INTEGRATION.md  architecture.rst
docs/diagrams/: ng-classes-browse-phase1-service.graphml  ng-components-browse-phase1.graphml
docs/source/: architecture.rst  conf.py  index.rst
docs/spinout-chrome/: arxiv-header-footer.css
requirements/: dev.txt  prod.txt  test.txt
script/: add-browse-paths.sh  get_test_article.py  start  start_debug  timepdf_dl.py
script/sync_prod_to_gcp/: .gitignore  Makefile  README.md  digester.py  identifier.py  (+9 more)
scripts/: get_test_article.py
sync_prod_to_gcp/: RREADME.md  sync_published.sh  sync_published_to_gcp.py
tests/: 0906.5132v3.abs  __init__.py  conftest.py  copy-to-dev-bucket.py  docstyle.sh  is_withdrawn.py  lint.sh  test_2103_11058.py  test_304.py  test_404.py  test_abs.py  test_abs_parser.py  test_anc.py  test_archive.py  test_audio.py  test_author_affil.py  test_authors.py  test_bibex.py  test_browse.py  test_browse_links.py  test_catchup.py  test_categories.py  test_cite.py  test_click_through.py  test_clickthrough.py  test_controllers.py  test_cookies.py  test_database.py  test_database_service.py  test_db_abs.py  test_db_list.py  test_docmetadata.py  test_doi.py  test_email_hash.py  test_exceptions.py  test_external_refs_cits.py  test_fake_list.py  test_filters.py  test_fmt_txt.py  test_formats.py  (+39 more)
(+1810 files in other folders)
