[tool.poetry]
name = "browse"
version = "1.0.0"
description = "arXiv public browse and download app."
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

MarkupSafe = "*"
sqlalchemy = "^2.0.26" 
flask-rangerequest = "^0.0.2"
flask-s3 = "*"
flask-wtf = "*"
geoip2 = "*"

google-cloud-logging = "^3.2.5"
google-cloud-storage = "^2.5.0"
cloud-sql-python-connector = {extras = ["pymysql"], version = "^1.4.1"}

opentelemetry-api = "^1.13.0"
opentelemetry-exporter-gcp-trace = "^1.3.0"
opentelemetry-instrumentation-flask = "^0.34b0"
opentelemetry-instrumentation-requests = "^0.34b0"
opentelemetry-propagator-gcp = "^1.3.0"
opentelemetry-sdk = "^1.13.0"

mysqlclient = ">=2.1"
pydantic = "1.*"
python-dateutil = "*"
validators = "*"
types-python-dateutil = "^2.8.19.12"
lxml = "^4.9.2"
xmltodict = "^0.13.0"

arxiv-base = {git = "https://github.com/arXiv/arxiv-base.git", rev = "b05405496e398728d5daaca2c6c3025e7f90b43a"}

flask = "^3.0.2"
google-cloud-compute = "^1.14.1"
psycopg2-binary = "^2.9.9"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "*"
coverage = "*"
hypothesis = "*"
mypy = "*"
pycodestyle = "*"
pydocstyle = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
pytest-easyread = "*"
pytest-html = "*"
pytest-mock = "*"
types-requests = "^2.31.0.20240125"
requests-mock = "^1.12.1"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:As the c extension couldn't be imported, `google-crc32c` is using a pure python implementation that is significantly slower. If possible, please configure a c build environment and compile the extension:RuntimeWarning",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
